Fixed horizontal scrollbar from showing but enable it if js is disabled

--- a/css/style.scss
+++ b/css/style.scss
@@ -15,8 +15,9 @@ body{
   color:#fff;
 	//overflow-x: hidden;
 	//overflow:hidden;
-	.nu-js {
-		overflow-x: hidden;
+	//overflow: hidden;
+	&.nu-js {
+		overflow: hidden;
 	}
 }
 
@@ -78,7 +79,7 @@ main {
   overflow-x: scroll;
 	border-top:1px solid rgba(114, 112, 113, 1.0);
 	border-bottom:1px solid rgba(114, 112, 113, 1.0);
-	
+	overflow:auto;
 	&  section {
 		height:100%;
 		float: left;
